--- a/ranger/config/rc.conf
+++ b/ranger/config/rc.conf
@@ -70,7 +70,7 @@ set vcs_backend_svn disabled
 set vcs_msg_length 50
 
 # Use one of the supported image preview protocols
-set preview_images false
+# set preview_images true
 
 # Set the preview image method. Supported methods:
 #
@@ -117,6 +117,7 @@ set preview_images false
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
 set preview_images_method w3m
+# set preview_images_method iterm2
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
@@ -171,7 +172,7 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders none
+set draw_borders true
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
@@ -252,7 +253,7 @@ set sort_unicode false
 set xterm_alt_key false
 
 # Whether to include bookmarks in cd command
-set cd_bookmarks true
+set cd_bookmarks false
 
 # Changes case sensitivity for the cd command tab completion
 set cd_tab_case sensitive
@@ -359,6 +360,7 @@ alias unmark     scout -Mr
 alias search     scout -rs
 alias search_inc scout -rts
 alias travel     scout -aefklst
+alias search_inc_back scout -brts
 
 # ===================================================================
 # == Define keys for the browser
@@ -383,7 +385,8 @@ map <A-k> scroll_preview -1
 map ? help
 map W display_log
 map w taskview_open
-map S shell $SHELL
+map S shell $SHELL --rcfile ~/rcfiles/.bashrc.ranger
+map T shell tig
 
 map :  console
 map ;  console
@@ -492,6 +495,8 @@ map yp yank path
 map yd yank dir
 map yn yank name
 map y. yank name_without_extension
+map dp console -p22 shell qpdf --password= --decrypt %f /tmp/test.pdf;mv /tmp/test.pdf %f
+map x shell less %f
 
 # Filesystem Operations
 map =  chmod
@@ -778,3 +783,11 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+# setlocal path=~/textfiles vcs_aware true
+# setlocal path=~/bin vcs_aware true
+
+map <C-f> fzf_select
+map <C-g> fzf_locate
+map zz   fzf_fasd
+map zo   console fasd%space
