--- a/ranger/config/rifle.conf
+++ b/ranger/config/rifle.conf
@@ -104,7 +104,7 @@ ext py  = python -- "$1"
 ext pl  = perl -- "$1"
 ext rb  = ruby -- "$1"
 ext js  = node -- "$1"
-ext sh  = sh -- "$1"
+ext sh  = bash -- "$1"
 ext php = php -- "$1"
 ext dart = dart run -- "$1"
 
@@ -143,6 +143,7 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
+ext pdf, has open,     X, flag f = open -a Preview  -- "$@"
 ext pdf, has llpp,     X, flag f = llpp "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
@@ -192,7 +193,8 @@ mime ^image/svg, has display,  X, flag f = display -- "$@"
 
 mime ^image, has imv,       X, flag f = imv -- "$@"
 mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
-mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
+# mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
+mime ^image, has feh, pbcopy       X, flag f = feh --action1 ";echo $(pwd)/%F | pbcopy" --action2 ";echo %F | pbcopy" --geometry 1024x768 --scale-down -- "$@"
 mime ^image, has feh,       X, flag f, !ext gif = feh -- "$@"
 mime ^image, has mirage,    X, flag f = mirage -- "$@"
 mime ^image, has ristretto, X, flag f = ristretto "$@"
