--- a/ranger/config/rifle.conf
+++ b/ranger/config/rifle.conf
@@ -194,8 +194,9 @@ mime ^image/svg, has display,  X, flag f = display -- "$@"
 mime ^image, has imv,       X, flag f = imv -- "$@"
 mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
 # mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
-mime ^image, has feh, pbcopy       X, flag f = feh --action1 ";echo $(pwd)/%F | pbcopy" --action2 ";echo %F | pbcopy" --geometry 1024x768 --scale-down -- "$@"
-mime ^image, has feh,       X, flag f, !ext gif = feh -- "$@"
+# mime ^image, has feh, pbcopy,X, flag f = feh --action1 ";echo $(pwd)/%F | pbcopy" --action2 ";echo %F | pbcopy" --geometry 1024x768 --scale-down -- "$@"
+mime ^image, has feh, X, flag f = feh --action1 ";echo $(pwd)/%F | pbcopy" --action2 ";echo %F | pbcopy" --geometry 1024x768 --scale-down -- "$@"
+# mime ^image, has feh,       X, flag f, !ext gif = feh -- "$@"
 mime ^image, has mirage,    X, flag f = mirage -- "$@"
 mime ^image, has ristretto, X, flag f = ristretto "$@"
 mime ^image, has eog,       X, flag f = eog -- "$@"
