fix: adjusted the SHELL mapping for zsh

--- a/ranger/config/rc.conf
+++ b/ranger/config/rc.conf
@@ -385,7 +385,8 @@ map <A-k> scroll_preview -1
 map ? help
 map W display_log
 map w taskview_open
-map S shell $SHELL --rcfile ~/rcfiles/.bashrc.ranger
+# map S shell $SHELL --rcfile ~/rcfiles/.bashrc.ranger
+map S shell $SHELL -d -f; source ~/rcfiles/.bashrc.ranger 
 map T shell tig
 
 map :  console
