Added custom formatters

--- a/ranger/config/rc.conf
+++ b/ranger/config/rc.conf
@@ -70,7 +70,7 @@ set vcs_backend_svn disabled
 set vcs_msg_length 50
 
 # Use one of the supported image preview protocols
-# set preview_images true
+set preview_images true
 
 # Set the preview image method. Supported methods:
 #
@@ -116,8 +116,9 @@ set vcs_msg_length 50
 #   Preview images in full color with the external command "ueberzug".
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
-set preview_images_method w3m
-# set preview_images_method iterm2
+# set preview_images_method sixel
+# set preview_images_method mpv
+set preview_images_method iterm2
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
@@ -147,7 +148,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme default
+set colorscheme solarized
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
@@ -496,6 +497,7 @@ map yp yank path
 map yd yank dir
 map yn yank name
 map y. yank name_without_extension
+map <C-d> shell drag %p
 map dp console -p22 shell qpdf --password= --decrypt %f /tmp/test.pdf;mv /tmp/test.pdf %f
 map x shell less %f
 
